objects/LAT_Stock__c.object
<CustomObject>
    <description>Object related to stock availability per product which provides Stock Level (Low, Ok, No stock), safety stock, branch, etc for LATAM</description>
    <fields>
        <fullName>LAT_Branch__c</fullName>
        <description>Branch, Plant, Business Unit</description>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_IsActive__c</fullName>
        <formula>LAT_Product__r.LAT_IsActive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_JDE_Error__c</fullName>
        <label>JDE Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Last_Update__c</fullName>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Lat Stocks</relationshipLabel>
        <relationshipName>Lat_StocksList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Safety_Stock__c</fullName>
        <label>Safety Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Stock__c</fullName>
        <label>Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Unit__c</fullName>
        <label>Unit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lat_StockLevel__c</fullName>
        <label>Lat StockLevel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Stock</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lat Stocks</relationshipLabel>
        <relationshipName>Lat_Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LAT Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAT_Branch__c</columns>
        <columns>LAT_JDE_Error__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_Stock__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_Safety_Stock__c</columns>
        <columns>Lat_StockLevel__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Argentina</fullName>
        <columns>NAME</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_Branch__c</columns>
        <columns>LAT_Stock__c</columns>
        <columns>LAT_Last_Update__c</columns>
        <columns>LAT_JDE_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Stock__c.LAT_AR_Standard</value>
        </filters>
        <label>Argentina</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stock_Productos_Activos_Argentina</fullName>
        <columns>NAME</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_Branch__c</columns>
        <columns>LAT_Stock__c</columns>
        <columns>LAT_Last_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Stock__c.LAT_AR_Standard</value>
        </filters>
        <filters>
            <field>LAT_IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Stock Productos Activos Argentina</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
            <group>LAT_AR_Asistente_Cadenas_Users</group>
            <group>LAT_CRM_IT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Uruguay_Border</fullName>
        <columns>NAME</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_Stock__c</columns>
        <columns>LAT_Branch__c</columns>
        <columns>LAT_Last_Update__c</columns>
        <columns>LAT_JDE_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Stock__c.LAT_UY_Standard</value>
        </filters>
        <filters>
            <field>LAT_Branch__c</field>
            <operation>equals</operation>
            <value>09</value>
        </filters>
        <label>Uruguay Border</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Uruguay_Dom_stico</fullName>
        <columns>NAME</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_Stock__c</columns>
        <columns>LAT_Branch__c</columns>
        <columns>LAT_Last_Update__c</columns>
        <columns>LAT_JDE_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Stock__c.LAT_UY_Standard</value>
        </filters>
        <filters>
            <field>LAT_Branch__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>Uruguay Doméstico</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>LAT Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lat Stocks</pluralLabel>
    <recordTypes>
        <fullName>LAT_AR_Standard</fullName>
        <active>true</active>
        <label>Argentina</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_BR_Standard</fullName>
        <active>true</active>
        <label>Brasil</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_Standard</fullName>
        <active>true</active>
        <label>México</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_UY_Standard</fullName>
        <active>true</active>
        <label>Uruguay</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>